# meta-ads-mcp

./: main.py  pyproject.toml
src/meta_ads_mcp/: __init__.py  __main__.py  config.py  main.py  server.py
src/meta_ads_mcp/meta_api_client/: client.py  constants.py  errors.py  utils.py
src/meta_ads_mcp/tests/meta_api_client/unit/: make_graph_api_call_test.py  make_graph_api_post_test.py
src/meta_ads_mcp/tests/unit/: server_test.py
src/meta_ads_mcp/tools/: __init__.py  accounts.py  ads.py  adsets.py  audiences.py  batch_queries.py  campaigns.py  catalogs.py  media.py  reporting.py  utilities.py
